Data reshaping exercise

--- a/DataReshaping.Rmd
+++ b/DataReshaping.Rmd
@@ -1,11 +1,14 @@
 ---
 title: "Data Reshaping"
+author: "Hendrilalaina"
+date: "2025-03-17"
 output: 
   html_document:
     toc: true
     toc_depth: 2
     toc_float: true
     code_folding: show
+    number_sections: true
 ---
 
 ```{r setup, include=FALSE}
